Pending changes in the mainline
===============================

* Fix forbidden access when the PatientID and StudyInstanceUID are identical.


2024-07-03 - v 0.8.1
====================

* Fix internal error when the auth-service was not configured to implement the role/permission API


2024-06-27 - v 0.8.0
====================

* Added support for roles/permissions edition:
  - new configuration "WebServiceSettingsRolesUrl"
  - new API routes:
    - /auth/settings/roles (GET/PUT)
    - /auth/settings/permissions (GET)
* Fix wrong access to POST /instances that was considered as a resource list.


2024-05-16 - v 0.7.2
====================

* Fix wrong forbidden access to /dicom-web/studies/../series for users who 
  had "authorized_labels"=="*"
* Added new default permissions for /tools/create-dicom, 
  /stl/encode-rtstruct, /stl/encode-nifti

2024-03-25 - v 0.7.1
====================

* Added missing parsing of /dicom-web/studies/.../instances
* Clarification: the "authorized_labels" field of the user profile
  is actually a list of studies authorized labels !  
* The tools/find has been updated to take this into account and will 
  possibly refuse to perform tools/find at instance or series level if there
  is no StudyInstanceUID in the query.
  This fixes forbidden access to e.g. /dicom-web/studies/../series/../instances/..
  on studies that have at least one authorized_labels.
* The GET argument tokens are now also added as HTTP headers in the query to the
  auth-service (this was already done only for Header tokens).
* The default permissions have been updated to handle /system & /plugins/...


2024-02-16 - v 0.7.0
====================

* Added new default permissions "SINGLE_RESOURCE_PATTERNS" and 
  reorganized the permissions accordingly.  
  This notably facilitate accessing a single resource with a user token.  
  The plugins first check that the user has the right permissions to access the route 