@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Fix forbidden access when the PatientID and StudyInstanceUID are identical.
+* Fix an error when WebServiceSettingsRolesUrl is not defined.
 
 
 2024-07-03 - v 0.8.1
